--- a/projectCss.css
+++ b/projectCss.css
@@ -1,75 +1,31 @@
 .alert{
-  text-align: center;
   background-color:#F35E3E;
   color:black;
-  margin-left: 15%; 
+  margin-left: 20%; 
   margin-top: 2%;
-  margin-right: 20%; 
-  position: relative;     
+  margin-right: 20%;
+  min-width:50%;
+  
+  position: relative;
+  text-align: center; 
 }
 
-.navbar-header{float: right;}
-      
 .container-horizontal{
   background-color:#1E2022;
   color:white;
-  width: 100%;
-  text-align: center;      
   padding-bottom:1%;
   position: relative;
-
+  text-align: center;
+  width: 100%;
 } 
 
-.col-2-3 {
-  width: 85%;
-  height: auto;
-  float:left;
-  text-align:center;
-  position: relative;
-  background-color:#FCEFED;
-}
-
 .btn {
+  display: inline-block;
   float: right;
   position: relative;
-  margin-top:2%;
+  margin-top:7%;
   margin-right:8%;
   padding-bottom: 2%;
-  display: inline-block;
-}
-
-.col-1-3 {
-  line-height:400%;
-  background-color:#C9D6DF;
-  min-height: 200%;
-  width:15%;
-  float:left;
-  position: relative;
-  text-align: center; 
-}
-
-.container-group {
-  position: relative;
-  text-align: center; 
-  padding-bottom: 100%;
-  position: relative;
-}
-      
-.pagination {
-  float :right;
-  padding-right: 50%;
-  margin-top: 95%;
-  position: relative;
-}
-
-.footer {
-  background-color:#3B2E40;
-  color:white;
-  clear:both;
-  text-align:center;
-  padding: 0.5%;
-  width:auto;  
-  position: relative;
 }
 
 .dropdown-menu{
@@ -77,21 +33,78 @@
   position: relative;
   margin-left:40%;
   display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-
-    
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  
 }
 
 .dropdown-menu a {
   color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
 }
 
-.dropdown-menu a:hover {background-color: #f1f1f1}
+.dropdown-menu a:hover {
+  background-color: #f1f1f1;
+}
+
+.col-2-3 {
+  width: 83%;
+  height:100%;
+  float:right;
+  background-color: #FCE38A;
+}
+
+.pagination {
+  float :right;
+  padding-right:5%;
+  margin-top: 90%;
+  position: relative;
+}
+
+.container-group {
+  position: relative;
+  text-align: center; 
+  padding-bottom:0%;
+  position: relative;
+}
+
+.col-1-3 {
+  background-color:#C9D6DF;
+  width:17%;
+  float:left;
+  
+  text-align: center; 
+}
+
+.container-vertical{
+   line-height:200%;
+   min-width: 17%;
+}
+
+.navbar-header{
+  float: right;
+
+}
+
+.footer {
+  background-color:#3B2E40;
+  color:white;
+  clear:both;
+  text-align:center;
+  padding: 1%;
+  height:auto;
+  width:auto;  
+  position: relative;
+}
+
+
+
+
+
+
 
 
