--- a/projectCss.css
+++ b/projectCss.css
@@ -31,11 +31,12 @@
 .dropdown-menu{
   background-color:#DCDCDC;
   position: relative;
-  margin-left:40%;
+  margin-right:55%;
   display: none;
-  position: absolute;
+  position: relative;
   background-color: #f9f9f9;
-  min-width: 160px;
+  min-width: 10px;
+
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   
 }
@@ -76,13 +77,14 @@
   background-color:#C9D6DF;
   width:17%;
   float:left;
+  position: relative;
   
-  text-align: center; 
 }
 
 .container-vertical{
    line-height:200%;
    min-width: 17%;
+   text-align:left;
 }
 
 .navbar-header{
@@ -101,9 +103,13 @@
   position: relative;
 }
 
+.container-body{ width: auto; height: auto;}
 
-
-
+.table-responsive{
+  padding-left: 5%;
+  width: 20%;
+   display: inline-block;
+}
 
 
 
